--- a/FCJ_2025_Workshop01/config.toml
+++ b/FCJ_2025_Workshop01/config.toml
@@ -1,6 +1,6 @@
 # Change the default theme to be use when building the site with Hugo
 theme = "hugo-theme-learn"
-baseURL = "https://vubaolongkg.github.io/FCJ_2025_Workshop/"
+baseURL = "https://trungquangnguyeen.github.io/Serverless-Container-Orchestration-with-AWS-Fargate/"
 
 # For search functionality
 [outputs]
